made navigation bar

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="stylesheet" href="w3-css.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -25,6 +26,21 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <header class="w3-blue-gray">
+      <nav class="w3-content">
+        <a href="" class="w3-hover-lime w3-padding-small">
+          <img src="/img/Memory-black.png" alt="logo memory" width="100">
+        </a>
+        <ul class="">
+          <li class="w3-button w3-bar-item w3-hover-lime w3-large">Scores</li>
+          <li class="w3-button w3-bar-item w3-hover-lime w3-large">Règles</li>
+          <li class="w3-button w3-bar-item w3-hover-lime w3-large">New</li>
+          <li class="w3-button w3-bar-item w3-hover-lime w3-large">Connexion</li>
+          <li class="w3-button w3-bar-item w3-hover-lime w3-large">Inscription</li>
+          <li class="w3-button w3-bar-item w3-hover-lime w3-large">User</li>
+        </ul>
+      </nav>
+    </header>
     <div id="root"></div>
     <!--
       This HTML file is a template.
