--- a/public/index.html
+++ b/public/index.html
@@ -28,16 +28,15 @@
     </noscript>
     <header class="w3-blue-gray">
       <nav class="w3-content">
-        <a href="" class="w3-hover-lime w3-padding-small">
-          <img src="/img/Memory-black.png" alt="logo memory" width="100">
+        <a href="" class="w3-hover-blue w3-padding-small">
+          <img src="/img/Memory-white.png" alt="logo memory" width="100">
         </a>
         <ul class="">
           <li class="w3-button w3-bar-item w3-hover-lime w3-large">Scores</li>
           <li class="w3-button w3-bar-item w3-hover-lime w3-large">Règles</li>
-          <li class="w3-button w3-bar-item w3-hover-lime w3-large">New</li>
-          <li class="w3-button w3-bar-item w3-hover-lime w3-large">Connexion</li>
-          <li class="w3-button w3-bar-item w3-hover-lime w3-large">Inscription</li>
-          <li class="w3-button w3-bar-item w3-hover-lime w3-large">User</li>
+          <li class="w3-button w3-bar-item w3-hover-none w3-large">
+              <img src="https://www.w3schools.com/w3images/avatar2.png" alt="" class="w3-image w3-circle" width="50">
+          </li>
         </ul>
       </nav>
     </header>
