made correction for logo

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     </noscript>
     <header class="w3-blue-gray">
       <nav class="w3-content">
-        <a href="" class="w3-hover-blue w3-padding-small">
+        <a href="" class="w3-hover-none w3-padding-small">
           <img src="/img/Memory-white.png" alt="logo memory" width="100">
         </a>
         <ul class="">
